# HiveAuthBot

./: pyproject.toml  start.py  startFlask.py
src/: app.py  bot.py  config.py
src/commands/: auth.py  ping.py
src/db/: database.py  sessionmaker.py
